# fallacy-cutter

./: .gitignore  MANIFEST.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: about.html  appendix-a.html  index.html  science.html
essay/: about.md  instruments-not-intentions.md  science.md
essay/appendices/: A-what-the-knife-checks.md
examples/: CL0_preregistration.json  README.md
examples/hello_gate/: PREREG.json  README.md  decision.json  run.py
gate_harness/: README.md  __init__.py  exploration_ledger.py  preprocessing_order.py  prereg.py  split_integrity.py  verify_decision.py
gate_harness/tests/: test_adversarial.py  test_exploration_ledger.py  test_preprocessing_order.py  test_prereg.py  test_split_integrity.py
integrations/claude_science/: README.md  mcp_server.py
integrations/claude_science/skill/fallacy-cutter/: SKILL.md
methodology/: 00_inventory.md  01_method_from_practice.md  02_extracted_method.md  03_not_yet_method.md  04_first_transfer_test.md  README.md  SUMMARY.md
methodology/harness_spec/: failure_conditions.md  output_schema.md  usability_test_01_report.md  visibility_rules.md
scripts/: build_landing.py  verify_all.py
spec/: README.md  decision-schema-v1.json
