[project]
name = "fallacy-cutter"
version = "0.1.0"
description = "A fail-closed instrument and methodology for trustworthy experiments by humans and AI agents"
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# the repo has many top-level dirs (methodology/, examples/, docs/, ...);
# only gate_harness is the installable package
packages = ["gate_harness", "gate_harness.tests"]

[tool.pytest.ini_options]
testpaths = ["gate_harness/tests"]
